--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="author" content="Chinedu">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+  <title>Product preview card component</title>
   
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="style.css">
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div class="container">
@@ -25,10 +20,10 @@
     <div class="hero-section">
      <p class="perfume">Perfume</p>
 
-     <p class="main-heading"><h1>Gabrielle Essence Eau De Parfum</h1></p>
+     <p class="main-heading">Gabrielle Essence Eau De Parfume</p>
   
      <div class="description">
-       A floral, solar and voluptuous<br>interpretation composed by Olivier Polge, 
+       A floral, solar and voluptuous interpretation composed by Olivier Polge, 
        Perfumer-Creator for the House of CHANEL.
      </div>
   
@@ -44,10 +39,6 @@
      </div>
     </div>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">MartinoCode</a>.
-    </div>
   </div>
   
 </body>
